Fix overlapping boxes in membership page

--- a/themes/hugo-bulma-blocks-theme/assets/sass/style.sass
+++ b/themes/hugo-bulma-blocks-theme/assets/sass/style.sass
@@ -105,3 +105,6 @@ th
 
 code 
   font-size: 14px  
+
+.rich-content-text
+  padding: 20px !important
